<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/repeat_background"
    tools:context=".activities.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        android:elevation="5dp"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_person_24"/>

                <EditText
                    android:id="@+id/etNama"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/nama"
                    android:inputType="textPersonName"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_date_range_24"/>

                <EditText
                    android:id="@+id/etTanggalLahir"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="text"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_wc_24"/>

                <Spinner
                    android:id="@+id/spJenisKelamin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edittextstyle2"
                    android:entries="@array/jenis_kelamin"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_phone_24"/>

                <EditText
                    android:id="@+id/etNomorHP"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/no_hp"
                    android:inputType="phone"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/app_name"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_home_24"/>

                <EditText
                    android:id="@+id/etAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:gravity="center_vertical|start"
                    android:hint="@string/alamat"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="255"
                    android:maxLines="3"
                    android:minLines="2"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/email"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_email_24"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/password"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_vpn_key_24"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/green_500"
                    android:contentDescription="@string/konfirmasi_password"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_vpn_key_24"/>

                <EditText
                    android:id="@+id/etKonfirmasiPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/edittextstyle2"
                    android:hint="@string/konfirmasi_password"
                    android:inputType="textPassword"
                    android:textColorHint="#536E7A"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_style1"
                android:drawableEnd="@drawable/ic_baseline_send_24"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>

</LinearLayout>